[IMP] account: show journal field when 2+ journals are present
Before this PR:
- The journal field was not visible to invoicing users because it was restricted
  to users in the `account.group_account_readonly` group only.

After this PR:
- Now the Journal field is visible to invoicing users when 2 or more journals of
  the same type exist even when only using `account` or `account_accountant`.
- for example,
  when more than one Sales journal exists, journal field is visible on Invoice
  and Credit Note;
  when more than one Purchase journal exists, journal field is visible on Vendor
  Bill and Vendor Refund.

Related PR: https://github.com/odoo/enterprise/pull/93906

Task : 4988183

--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -1065,13 +1065,12 @@
                                            options="{'no_quick_create':True}" readonly="state in ['cancel', 'posted']"/>
                                 </div>
                                 <field name="delivery_date" invisible="not show_delivery_date" readonly="state != 'draft'"/>
-                                <label for="journal_id" groups="account.group_account_readonly"/>
-                                <label for="currency_id" groups="!account.group_account_readonly,base.group_multi_currency"/>
+                                <label for="journal_id" invisible="not show_journal"/>
+                                <label for="currency_id" groups="base.group_multi_currency" invisible="show_journal"/>
                                 <div name="journal_div"
-                                     class="d-flex"
-                                     groups="account.group_account_readonly,base.group_multi_currency">
+                                     class="d-flex">
                                     <field name="journal_id"
-                                           groups="account.group_account_readonly"
+                                           invisible="not show_journal"
                                            options="{'no_create': True, 'no_open': True}"
                                            readonly="posted_before and name not in (False, '', '/')"/>
                                     <div name="in_and_refresh_button_div"
