--- a/addons/website_sale_comparison/static/src/scss/website_sale_comparison.options.scss
+++ b/addons/website_sale_comparison/static/src/scss/website_sale_comparison.options.scss
@@ -4,12 +4,12 @@
 // entry. Show them when `o_wsale_products_opt_has_comparison` is applied.
 :where(.oe_product_cart) {
 
-    .o_add_compare {
+    .o_add_compare, .o_add_to_compare {
         display: var(--o-wsale-comparison-btn-display, none);
         order: var(--o-wsale-comparison-btn-order);
     }
 
-    .o_add_compare_placeholder {
+    .o_add_compare_placeholder, .o_add_to_compare_placeholder {
         display: var(--o-wsale-comparison-btn-placeholder-display, none);
         order: var(--o-wsale-comparison-btn-order);
     }
