--- a/addons/purchase/views/purchase_views.xml
+++ b/addons/purchase/views/purchase_views.xml
@@ -258,6 +258,10 @@
                                     <field name="state" column_invisible="True"/>
                                     <field name="product_type" column_invisible="True"/>
                                     <field name="invoice_lines" column_invisible="True"/>
+                                    <!-- Those 3 fields must stay with force save as there are readonly -->
+                                    <field name="parent_id" column_invisible="True" force_save="1"/>
+                                    <field name="collapse_prices" column_invisible="True" force_save="1"/>
+                                    <field name="collapse_composition" column_invisible="True" force_save="1"/>
                                     <field name="technical_price_unit" column_invisible="True"/>
                                     <field name="sequence" widget="handle"/>
                                     <!-- optional="show" allows name (description) to be editable -->
