--- a/addons/sale/views/sale_order_views.xml
+++ b/addons/sale/views/sale_order_views.xml
@@ -614,9 +614,10 @@
                                 <field name="selected_combo_items" column_invisible="1"/>
                                 <field name="virtual_id" column_invisible="1"/>
                                 <field name="linked_virtual_id" column_invisible="1"/>
-                                <field name="parent_id" column_invisible="1"/>
-                                <field name="collapse_prices" column_invisible="1"/>
-                                <field name="collapse_composition" column_invisible="1"/>
+                                <!-- Those 3 fields must stay with force save as there are readonly -->
+                                <field name="parent_id" column_invisible="1" force_save="1"/>
+                                <field name="collapse_prices" column_invisible="1" force_save="1"/>
+                                <field name="collapse_composition" column_invisible="1" force_save="1"/>
 
                                 <!-- Currency, needed for monetary widgets to display the currency symbol -->
                                 <field name="currency_id" column_invisible="True"/>
