[IMP] stock: replenishment forecast graph
We are removing the sale order history part of the RR wizard
and are replacing it with a graph that will show a preview
of what the replenishment cycle should look like.

This graph takes the product_min_qty, product_max_qty as well as
a list of outgoing moves (minus eventual returns) on a given time
length and a ratio to calculate a daily demand, a reordering
frequency and an average stock.

Those values can be changed directly on the wizard. This will
trigger an orm.call() to compute the graph data based on the new
parameters.

task 4779169

closes odoo/odoo#217987

Related: odoo/enterprise#90534
Related: odoo/upgrade#8192
Signed-off-by: Tiffany Chang (tic) <tic@odoo.com>

--- a/addons/stock/wizard/stock_replenishment_info.xml
+++ b/addons/stock/wizard/stock_replenishment_info.xml
@@ -4,18 +4,37 @@
         <field name="name">Stock Replenishment Information</field>
         <field name="model">stock.replenishment.info</field>
         <field name="arch" type="xml">
-            <form>
+            <form class="o_stock_replenishment_info">
                 <field name="orderpoint_id" invisible="1"/>
                 <field name="qty_to_order" invisible="1"/>
                 <div class="alert alert-info" role="alert">
-                    <span>When the stock level at the forecasted date is below the minimum (<field name="product_min_qty"/> <field name="product_uom_name"/>), a replenishment must be done to reach the maximum level of stock (<field name="product_max_qty"/> <field name="product_uom_name"/>).</span>
+                    <span>When the stock level at the forecasted date is below the minimum (<field name="product_min_qty" readonly="True"/> <field name="product_uom_name"/>), a replenishment must be done to reach the maximum level of stock (<field name="product_max_qty" readonly="True"/> <field name="product_uom_name"/>).</span>
                 </div>
                 <group>
                     <group>
                         <field nolabel="1" name="json_lead_days" colspan="2" widget="lead_days_widget"/>
                     </group>
                     <group>
-                        <field nolabel="1" name="json_replenishment_history" colspan="2" widget="replenishment_history_widget"/>
+                        <div>
+                            <h2>Min - Max</h2>
+                            <hr/>
+                            <div>
+                                <label for="based_on"/>
+                                <field name="based_on" class="oe_inline" widget="time_period_selection"/> x
+                                <field name="percent_factor" class="o_small"/> %
+                            </div>
+                            <div>
+                                <label class="o_form_label col-3" for="product_min_qty"/>
+                                <field name="product_min_qty" class="oe_inline"/>
+                                <field name="product_uom_name" class="oe_inline"/>
+                            </div>
+                            <div>
+                                <label class="o_form_label col-3" for="product_max_qty"/>
+                                <field name="product_max_qty" class="oe_inline"/>
+                                <field name="product_uom_name" class="oe_inline"/>
+                            </div>
+                            <field nolabel="1" name="json_replenishment_graph" colspan="2" widget="replenishment_graph_widget"/>
+                        </div>
                     </group>
                 </group>
                 <notebook>
